--- a/Frontend/user-panel/src/Styles/PurchasedHistory.css
+++ b/Frontend/user-panel/src/Styles/PurchasedHistory.css
@@ -52,6 +52,12 @@
     margin-bottom: 5px;
 }
 
+.quantity {
+    font-size: 0.875rem;
+    margin-bottom: 5px; 
+}
+
+
 /* Price Styling */
 .price {
     font-size: 14px;
